Add publish commands

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "prepublish": "yarn build",
     "build": "rollup -c",
     "watch": "rollup -cw",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish:patch": "yarn run build && npm version patch && git push origin master && git push origin --tags && npm publish --access=public",
+    "publish:minor": "yarn run build && npm version minor && git push origin master && git push origin --tags && npm publish --access=public",
+    "publish:major": "yarn run build && npm version major && git push origin master && git push origin --tags && npm publish --access=public"
   },
   "repository": {
     "type": "git",
